--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.6.0",
     "core-js": "^2.4.1",
     "i": "^0.3.6",
     "npm": "^5.7.1",
